--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -12,7 +13,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "weather-icons": "^1.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +49,7 @@
   "devDependencies": {
     "babel-jest": "^29.5.0",
     "cypress": "^12.10.0",
+    "deep-freeze": "^0.0.1",
     "eslint-plugin-jest": "^27.2.1"
   },
   "jest": {
